// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`MainNavItem > should render correctly 1`] = `
<DocumentFragment>
  <li
    class="sc-jSMdHm iSfdEk"
    data-rc="MainNavLink"
  >
    <a
      class="sc-hKMtDE cQvbKs"
    >
      Item Content
    </a>
  </li>
</DocumentFragment>
`;

exports[`MainNavItem > should render with href 1`] = `
<DocumentFragment>
  <li
    class="sc-jSMdHm iSfdEk"
    data-rc="MainNavLink"
  >
    <a
      class="sc-hKMtDE cQvbKs"
      href="/example"
    >
      Item Content
    </a>
  </li>
</DocumentFragment>
`;

exports[`MainNavItem should render correctly 1`] = `
<DocumentFragment>
  <li
    class="sc-jSUZER dDTVlj"
    data-rc="MainNavLink"
  >
    <a
      class="sc-hLBbgP japqQX"
    >
      Item Content
    </a>
  </li>
</DocumentFragment>
`;

exports[`MainNavItem should render with href 1`] = `
<DocumentFragment>
  <li
    class="sc-jSUZER dDTVlj"
    data-rc="MainNavLink"
  >
    <a
      class="sc-hLBbgP japqQX"
      href="/example"
    >
      Item Content
    </a>
  </li>
</DocumentFragment>
`;
